--- a/locale/de_old.html
+++ b/locale/de_old.html
@@ -20,24 +20,20 @@ $texts['email_label']="E-Mailadresse: ";
 $texts['email_link']='<a href="mailto:simon.meyborg@hanseventures.com" >info@viehauktion.de</a>';
 $texts['page_vat']="VAT DE 12322233";
 
-$texts['signin_login']="Einloggen";
-$texts['signin_register']="Neu anmelden";
-$texts['signin_signedin_as']="eingelogged als: ";
-$texts['signin_profil']="Profil";
-$texts['signin_logout']="Ausloggen";
+$texts['signin_login']="Anmelden";
+$texts['signin_register']="Registrieren";
+$texts['signin_signedin_as']="Angemeldet als: ";
+$texts['signin_logout']="Abmelden";
+
+$texts['navi_news']="Aktuelles";
+$texts['navi_auction']="Auktionen ansehen";
+$texts['navi_auction_add']="Auktion einstellen";
 
 
 
 $texts['pigs']="Mastschweine";
 $texts['bulls']="Bullen";
 $texts['chicken']="Geflügel";
-
-
-
-
-$texts['navi_news']="Startseite";
-$texts['navi_auction']="Auktionen ansehen";
-$texts['navi_auction_add']="Auktion einstellen";
 
 $texts['navi_market']="Marktplatz";
 $texts['navi_market_add']="Vieh anbieten";
@@ -176,8 +172,7 @@ $texts['seller']="Verkäufer";
 
 $texts['buyer']="Käufer";
 
-$texts['show_auction_detail']="Autionsdetails";
-$texts['show_offer_detail']="Angebotsdetails";
+
 
 $texts['auction_category']="Tierart:";
 $texts['auction_amount']="Anzahl der Tiere:";
@@ -278,10 +273,10 @@ $texts['buy_offer_not_logged_in_error']="Um kaufen zu können, müssen sie sich 
 
 $texts['next_auctions']="Nächste Auktion";
 
-$texts['footer_agb']="Allg. Geschäftsbedingungen";
+$texts['footer_agb']="AGB";
 $texts['footer_contact']="Kontakt";
 $texts['footer_imprint']="Impressum";
-$texts['footer_team']="Unser Team";
+$texts['footer_team']="Team";
 
 $texts["faq_headline"]="Häufige Fragen";
 
