--- a/mails/ended_offer_to_seller.de.html
+++ b/mails/ended_offer_to_seller.de.html
@@ -458,7 +458,7 @@
                             <p style="margin: 1em 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 12px;line-height: 150%;text-align: left;">Sehr geehrte(r) ___SELLERFIRSTNAME___ ___SELLERLASTNAME___,
  
 <br/><br/>
-herzlichen Glückwunsch! Ihre Festpreisangebot wurde angenommen.
+herzlichen Gl&uuml;ckwunsch! Ihre Festpreisangebot wurde angenommen.
 <br/><br/>
 Ihr Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg.<br/>
 <br/>
@@ -478,7 +478,7 @@ Diese Funktion finden Sie in Ihrem Profil.
 Sie erhalten eine weitere E-Mail, sobald sich der Status zu Ihren Gunsten bzw. entgegen ge&auml;ndert hat.<br/>
 Alle Daten zum Festpreisangebot k&ouml;nnen Sie weiterhin in Ihrem Profil zum abrufen.
 <br/><br/>
-Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml;chst mit einer neuen Auktion oder einem neuen Angebot auf ___SITENAME___ begr&uuml;ßen zu d&uuml;rfen.
+Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml;chst mit einer neuen Auktion oder einem neuen Angebot auf ___SITENAME___ begr&uuml;&szlig;en zu d&uuml;rfen.
 <br/><br/><br/>
 Ihr
 ___SITENAME___ 
