--- a/mails/activationmail.de.html
+++ b/mails/activationmail.de.html
@@ -456,14 +456,15 @@
                         
                             <h2 style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 26px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -1px;text-align: left;color: #606060 !important;">Willkommen bei viehauktion.com</h2><h3 style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;text-align: left;color: #606060 !important;">Aktivieren Sie Ihr Benutzerkonto</h3><p style="margin: 1em 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 12px;line-height: 150%;text-align: left;">Sehr geehrte(r) ___FIRSTNAME___ ___LASTNAME___,
 <br/> 
-willkomen bei ___SITENAME___. Wir freuen uns, dass Sie sich bei uns registriert haben.
+willkomen bei ___SITENAME___. <br/> Wir freuen uns, dass Sie sich bei uns registriert haben.
  <br/> <br/> 
-Um Ihre E-Mailadresse zu best&auml;tigen, klickn bitte noch folgenden Link:
+Um Ihre E-Mailadresse zu best&auml;tigen, klicken bitte noch folgenden Link:
 <br/> </p>
 
 <p style="width:500px"><a href="___LINK___" class="mc-template-link" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #3f947f;font-weight: normal;text-decoration: underline;">___LINK___</a></p>
 <p style="margin: 1em 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 12px;line-height: 150%;text-align: left;">
-
+Falls Sie sich als H&auml;ndler registriert haben, m&uuml;ssen Sie sich noch gedulden bis Sie einkaufen können. Wir werden Sie freischalten, sobald wir ihre Daten gepr&uuml;ft haben. Dies sollte im Laufe des Tages noch geschehen.
+<br/><br/>
 
 Ihr ___SITENAME___ Team
 <br/> <br/> 
