--- a/mails/success_to_buyer.de.html
+++ b/mails/success_to_buyer.de.html
@@ -472,7 +472,7 @@ Telefon: ___SELLERPHONE___<br/>
 E-Mailaddresse: ___SELLEREMAIL___<br/>
 <br/><br/>
 
-Bitte nehmen Sie zügig mit dem Verk&auml;ufer Kontakt auf, um die Details zur Lieferung zu besprechen.<br/><br/>
+Bitte nehmen Sie z&uuml;gig mit dem Verk&auml;ufer Kontakt auf, um die Details zur Lieferung zu besprechen.<br/><br/>
 
 
 Sie finden alle Daten zur Auktion nochmal in Ihrem Profil zum Abruf.<br/><br/>
