--- a/mails/activationmail.de.html
+++ b/mails/activationmail.de.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>___SUBJECT___</title>
+               <meta charset="utf-8" />
         
         <!--[if gte mso 6]>
         <style>
@@ -469,7 +470,7 @@ Falls Sie sich als H&auml;ndler registriert haben, m&uuml;ssen Sie sich noch ged
 Ihr ___SITENAME___ Team
 <br/> <br/> 
 
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 </p>
                         </td>
                     </tr>
