--- a/mails/ended_offer_to_buyer.de.html
+++ b/mails/ended_offer_to_buyer.de.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>___SUBJECT___</title>
-        
+               <meta charset="utf-8" />
         <!--[if gte mso 6]>
         <style>
             table.mcnFollowContent {width:100% !important;}
@@ -460,9 +460,9 @@
 
 herzlichen Gl&uuml;ckwunsch! Sie haben eine Festpreisangebot angenommen.<br/><br/>
 
-Der Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg.<br/><br/>
+Der Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg ___VEZG___.<br/><br/>
 
-Anbieter der Auktion ist:<br/><br/>
+Anbieter der Angebots ist:<br/><br/>
 
 ___SELLERFIRSTNAME___ ___SELLERLASTNAME___<br/>
 ___SELLERSTREET___ ___SELLERNUMBER___<br/>
@@ -485,7 +485,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und hoffen, Sie demn&
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
