--- a/mails/success_offer_to_seller.de.html
+++ b/mails/success_offer_to_seller.de.html
@@ -4,6 +4,7 @@
     	<!-- NAME: 1 COLUMN -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+               <meta charset="utf-8" />
         <title>___SUBJECT___</title>
         
         <!--[if gte mso 6]>
@@ -460,9 +461,9 @@
 <br/><br/>
 herzlichen Gl&uuml;ckwunsch! Ihr Festpreisangebot wurde rechtsverbindlich gekauft.
 <br/><br/>
-Ihr Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg.<br/>
+Ihr Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg  ___VEZG___.<br/>
 <br/>
-Ersteigert wurde Ihr Kontingent von:<br/>
+Gekauft wurde Ihr Kontingent von:<br/>
 <br/>
 ___BUYERFIRSTNAME___ ___BUYERLASTNAME___<br/>
 ___BUYERSTREET___ ___BUYERNUMBER___<br/>
@@ -471,7 +472,7 @@ ___BUYERPOSTCODE___ ___BUYERCITY___<br/>
 Telefon: ___BUYERPHONE___<br/>
 E-Mailaddresse: ___BUYEREMAIL___<br/>
 <br/>
-Bitte nehmen Sie mit dem K&aum;ufer z&uuml;gig Kontakt auf, um die Details zur Lieferung zu besprechen.<br/>
+Bitte nehmen Sie mit dem K&auml;ufer z&uuml;gig Kontakt auf, um die Details zur Lieferung zu besprechen.<br/>
 <br/>
 Wir d&uuml;rfen Ihnen durch den erfolgreichen Abschluss ___PROVISION___ in Rechnung stellen.
 Sie finden die Rechnung im Anhang dieser E-Mail sowie in Ihrem Profil zum Herunterladen.
@@ -483,7 +484,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
