--- a/mails/success_offer_without_invoice_to_seller.de.html
+++ b/mails/success_offer_without_invoice_to_seller.de.html
@@ -460,9 +460,9 @@
 <br/><br/>
 herzlichen Gl&uuml;ckwunsch! Ihr Festpreisangebot wurde rechtsverbindlich gekauft.
 <br/><br/>
-Ihr Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg.<br/>
+Ihr Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg  ___VEZG___.<br/>
 <br/>
-Ersteigert wurde Ihr Kontingent von:<br/>
+Gekauft wurde Ihr Kontingent von:<br/>
 <br/>
 ___BUYERFIRSTNAME___ ___BUYERLASTNAME___<br/>
 ___BUYERSTREET___ ___BUYERNUMBER___<br/>
@@ -482,7 +482,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
