--- a/mails/success_without_invoice_to_seller.de.html
+++ b/mails/success_without_invoice_to_seller.de.html
@@ -460,7 +460,7 @@
 <br/><br/>
 herzlichen Glückwunsch! Ihre Auktion war erfolgreich.
 <br/><br/>
-Sie erreichte eine H&ouml;chstgebot von ___PRICE___ &euro;/Kg.<br/>
+Sie erreichte eine H&ouml;chstgebot von ___PRICE___ &euro;/Kg  ___VEZG___.<br/>
 <br/>
 Ersteigert wurde Ihr Kontingent von:<br/>
 <br/>
@@ -482,7 +482,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
