--- a/mails/ended_offer_to_seller.de.html
+++ b/mails/ended_offer_to_seller.de.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>___SUBJECT___</title>
+               <meta charset="utf-8" />
         
         <!--[if gte mso 6]>
         <style>
@@ -460,9 +461,9 @@
 <br/><br/>
 herzlichen Gl&uuml;ckwunsch! Ihre Festpreisangebot wurde angenommen.
 <br/><br/>
-Ihr Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg.<br/>
+Ihr Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg  ___VEZG___.<br/>
 <br/>
-Ersteigert wurde Ihr Kontingent von:<br/>
+Gekauft wurde Ihr Kontingent von:<br/>
 <br/>
 ___BUYERFIRSTNAME___ ___BUYERLASTNAME___<br/>
 ___BUYERSTREET___ ___BUYERNUMBER___<br/>
@@ -483,7 +484,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
