--- a/mails/success_offer_to_buyer.de.html
+++ b/mails/success_offer_to_buyer.de.html
@@ -4,6 +4,7 @@
     	<!-- NAME: 1 COLUMN -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8" />
         <title>___SUBJECT___</title>
         
         <!--[if gte mso 6]>
@@ -460,9 +461,9 @@
 
 herzlichen Gl&uuml;ckwunsch! Sie haben ein Festpreisangebot rechtsverbindlich gekauft.<br/><br/>
 
-Der Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg.<br/><br/>
+Der Angebotspreis betr&auml;gt ___PRICE___ &euro;/Kg  ___VEZG___.<br/><br/>
 
-Anbieter der Auktion ist:<br/><br/>
+Anbieter des Angebots ist:<br/><br/>
 
 ___SELLERFIRSTNAME___ ___SELLERLASTNAME___<br/>
 ___SELLERSTREET___ ___SELLERNUMBER___<br/>
@@ -482,7 +483,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und hoffen, Sie demn&
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
