--- a/mails/buyer_activated.de.html
+++ b/mails/buyer_activated.de.html
@@ -466,7 +466,7 @@ Auf eine gute Zusammenarbeit.
 Ihr ___SITENAME___ Team
 <br/> <br/> 
 
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 </p>
                         </td>
                     </tr>
