--- a/mails/failure_to_seller.de.html
+++ b/mails/failure_to_seller.de.html
@@ -468,7 +468,7 @@ Da Ihre Auktion nicht erfolgreich war, werden Ihnen keine Kosten in Rechnung ges
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
