--- a/mails/newpassword.de.html
+++ b/mails/newpassword.de.html
@@ -470,7 +470,7 @@ Passwort:     ___PASSWORD___<br/>
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
