--- a/mails/ended_to_buyer.de.html
+++ b/mails/ended_to_buyer.de.html
@@ -485,7 +485,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und hoffen, Sie demn&
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
