--- a/mails/ended_to_seller.de.html
+++ b/mails/ended_to_seller.de.html
@@ -482,7 +482,7 @@ Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml
 Ihr
 ___SITENAME___ 
 Team<br/><br/>
-Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie Ihr nicht.
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
 <br/><br/><br/>
 </p>
                         </td>
