--- a/mails/cancel_to_recipient.de.html
+++ b/mails/cancel_to_recipient.de.html
@@ -468,6 +468,11 @@ Die Rechung finden Sie im Anhang dieser Mail, sowie in Ihrem Profil.
 
 Wir hoffen Sie denm&auml;chst mit einen neuen Angebot auf ___SITENAME___  begr&uuml;&szlig;en zu d&uuml;rfen.
 <br/><br/><br/>
+Ihr
+___SITENAME___ 
+Team<br/><br/>
+Diese E-Mail wurde automatisch erstellt. Bitte antworten Sie ihr nicht.
+<br/><br/><br/>
 </p>
                         </td>
                     </tr>
