--- a/mails/second_reminder.de.html
+++ b/mails/second_reminder.de.html
@@ -454,31 +454,19 @@
                         
                         <td valign="top" class="mcnTextContent" style="padding-top: 9px;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 15px;line-height: 150%;text-align: left;">
                         
-                            <h2 style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 26px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -1px;text-align: left;color: #606060 !important;">Sie haben rechtsverbindlich verkauft.</h2>
+                            <h2 style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 26px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -1px;text-align: left;color: #606060 !important;">Sie haben leider noch Zahlungsaust&auml;nde zu begleichen.</h2>
                             <p style="margin: 1em 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 12px;line-height: 150%;text-align: left;">Sehr geehrte(r) ___SELLERFIRSTNAME___ ___SELLERLASTNAME___,
  
 <br/><br/>
-herzlichen Gl&uuml;ckwunsch! Ihre Auktion war erfolgreich. 
+Sie haben bisher vers&auml;umt, Ihre Rechnung vom ___DATE___ in H&ouml; von ___TOTAL___ &euro; zu begleichen. 
 <br/><br/>
-Sie erreichte eine H&ouml;chstgebot von ___PRICE___ &euro;/Kg ___VEZG___.
-<br/>
-Ersteigert wurde Ihr Kontingent von:<br/>
-<br/>
-___BUYERFIRSTNAME___ ___BUYERLASTNAME___<br/>
-___BUYERSTREET___ ___BUYERNUMBER___<br/>
-___BUYERPOSTCODE___ ___BUYERCITY___<br/>
-<br/>
-Telefon: ___BUYERPHONE___<br/>
-E-Mailaddresse: ___BUYEREMAIL___<br/>
-<br/>
-Bitte nehmen Sie mit dem K&auml;ufer z&uuml;gig Kontakt auf, um die Details zur Lieferung zu besprechen.<br/>
-<br/>
-Wir d&uuml;rfen Ihnen durch den erfolgreichen Abschluss ___PROVISION___ &euro; in Rechnung stellen.<br/>
-Sie finden die Rechnung im Anhang dieser E-Mail sowie in Ihrem Profil zum Herunterladen.
+Wir hatten Ihnen schon vor 20 Tagen eine erste Mahnung zugestellt.
 <br/><br/>
-Alle Daten zur Auktion k&ouml;nnen Sie weiterhin in Ihrem Profil zum abrufen.
+Sie finden im Anhang dieser E-Mail nun die 2. Mahnung. 
 <br/><br/>
-Wir hoffen, dass der Kauf nun erfolgreich von statten geht und wir Sie demn&auml;chst mit einer neuen Auktion oder einem neuen Angebot auf ___SITENAME___ begr&uuml;ßen zu d&uuml;rfen.
+Falls Sie Fragen zur Zahlung haben, melden Sie sich einfach bei uns <a href="mailto:info@viehauktion.com">info@viehauktion.com</a>
+<br/><br/>
+Bitte bedenken Sie, dass, falls Sie nicht in den n&auml;chsten 2 Wochen zahlen, unsere Forderung an ein Inkassounternehmen weiterleiten werden, wodurch Ihnen weitere Kosten enstehen werden.
 <br/><br/><br/>
 Ihr
 ___SITENAME___ 
