--- a/mails/success_offer_to_seller.de.html
+++ b/mails/success_offer_to_seller.de.html
@@ -474,7 +474,7 @@ E-Mailaddresse: ___BUYEREMAIL___<br/>
 <br/>
 Bitte nehmen Sie mit dem K&auml;ufer z&uuml;gig Kontakt auf, um die Details zur Lieferung zu besprechen.<br/>
 <br/>
-Wir d&uuml;rfen Ihnen durch den erfolgreichen Abschluss ___PROVISION___ in Rechnung stellen.
+Wir d&uuml;rfen Ihnen durch den erfolgreichen Abschluss ___PROVISION___ &euro; in Rechnung stellen.
 Sie finden die Rechnung im Anhang dieser E-Mail sowie in Ihrem Profil zum Herunterladen.
 <br/><br/>
 Alle Daten zum Festpreisangebot k&ouml;nnen Sie weiterhin in Ihrem Profil zum abrufen.
